--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </main>
         <footer>
             <button id="whatsapp-btn">Ordenar por WhatsApp</button>
+            <p>Cerveceria Adelipa - 2024 | Todos los Derechos Reservados.</p>
         </footer>
     </div>
     <script src="script.js"></script>
